[package]
name = "kyber"
version = "0.2.0-alpha.2"
authors = ["quininer kel <quininer@live.com>"]
description = "a CCA-secure module-lattice-based KEM"
repository = "https://github.com/quininer/kyber"
license = "MIT"

[features]
default = [ "kyber768" ]
kyber512 = []
kyber768 = []
kyber1024 = []

[dependencies]
rand_core = "0.2"
sha3 = "0.7"
digest = "0.7"
subtle = "0.6"
arrayref = "0.3"
byteorder = "1.1"
itertools = "0.7"

[dev-dependencies]
rand = "0.5"
hex = "0.3"
